Added prelimenary html code

--- a/index.html
+++ b/index.html
@@ -14,6 +14,53 @@
 </head>
 
 <body>
-  <h1>My Resume</h1>
+  <div class="container">
+    <header>
+      <nav>
+        <a href="#">Introduction</a>
+        <a href="#">Skills</a>
+        <a href="#">Work History</a>
+        <a href="#">Contact Me</a>
+      </nav>
+    </header>
+    <section class="top">
+      <img class="intro image">
+      <div class="intro content">
+        <h2 class="font-spec">Erik Scow</h2>
+        <p>Why me?</p>
+      </div>
+    </section >
+    <section class="middle">
+      <div class="skills">
+        <h3>Skills</h3>
+        <ul>
+          <li>proficient with basic html</li>
+          <li>proficient with basic css</li>
+        </ul>
+      </div>
+      <div class="work-history">
+        <h3>Work History</h3>
+        <table>
+          <tr>
+            <th>Yrs</th>
+            <th>Company</th>
+            <th>Job Title</th>
+          </tr>
+          <tr>
+            <td>1 yr</td>
+            <td>Little Ceasars</td>
+            <td>Store Associate</td>
+          </tr>
+        </table>
+      </div>
+    </section>
+    <section class="bottom">
+      <h3>Contact Me</h3>
+      <ul>
+        <li>Phone: 559-359-0618</li>
+        <li>Email: erikscow@gmail.com</li>
+      </ul>
+    </section>
+  </div>
 </body>
 </html>
