started added less styling

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 
   <title>My Resume</title>
 
+  <link href="https://fonts.googleapis.com/css?family=Calistoga&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="css/index.css">
 
   <!--[if lt IE 9]>
@@ -24,8 +26,8 @@
       </nav>
     </header>
     <section class="top">
-      <img class="intro image">
-      <div class="intro content">
+      <img class="image" alt="Picture of Me">
+      <div class="intro-content">
         <h2 class="font-spec">Erik Scow</h2>
         <p>Why me?</p>
       </div>
