added css to top section with LESS

--- a/index.html
+++ b/index.html
@@ -26,9 +26,13 @@
       </nav>
     </header>
     <section class="top">
-      <img class="image" alt="Picture of Me">
+      <div class="wrapper">
+       <div class="img-div">
+          <img class="image" src="img/20180612_115513.jpg"alt="Picture of Me">
+       </div>
+      </div>
       <div class="intro-content">
-        <h2 class="font-spec">Erik Scow</h2>
+        <h2>Erik Scow</h2>
         <p>Why me?</p>
       </div>
     </section >
