added styling to top and middle sections of resume

--- a/index.html
+++ b/index.html
@@ -31,20 +31,26 @@
           <img class="image" src="img/20180612_115513.jpg"alt="Picture of Me">
        </div>
       </div>
-      <div class="intro-content">
+      <div class="intro content">
         <h2>Erik Scow</h2>
         <p>Why me?</p>
       </div>
     </section >
+
+    <hr>
+
     <section class="middle">
-      <div class="skills">
+      <div class="content skills">
         <h3>Skills</h3>
         <ul>
-          <li>proficient with basic html</li>
-          <li>proficient with basic css</li>
+          <li><a href="#">proficient with basic html</a></li>
+          <li><a href="#">proficient with basic css</a></li>
         </ul>
       </div>
-      <div class="work-history">
+
+      <div class="vl"></div>
+
+      <div class="content work-history">
         <h3>Work History</h3>
         <table>
           <tr>
