added nested media queries for mobile version

--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 
   <link href="https://fonts.googleapis.com/css?family=Calistoga&display=swap" rel="stylesheet">
 
+  <link href="https://fonts.googleapis.com/css?family=Fugaz+One|Open+Sans|Yeseva+One&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="css/index.css">
+
+  <meta content="width=device-width, initial-scale=1" name="viewport" />
 
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
@@ -33,7 +37,7 @@
       </div>
       <div class="intro content">
         <h2>Erik Scow</h2>
-        <p>Why me?</p>
+        <p>I am currently a student at Lambda School, where I am studying to become a software developer. After graduation from the program, I hope to get a job as a web developer. I am very dedicated to my trade and I always put my utmost effort into everything I produce.</p>
       </div>
     </section >
 
@@ -59,7 +63,7 @@
             <th>Job Title</th>
           </tr>
           <tr>
-            <td>1 yr</td>
+            <td>1</td>
             <td>Little Ceasars</td>
             <td>Store Associate</td>
           </tr>
@@ -69,8 +73,8 @@
     <section class="bottom">
       <h3>Contact Me</h3>
       <ul>
-        <li>Phone: 559-359-0618</li>
-        <li>Email: erikscow@gmail.com</li>
+        <li><span>Phone:</span> 559-359-0618</li>
+        <li><span>Email:</span> erikscow@gmail.com</li>
       </ul>
     </section>
   </div>
