completed css styling and added content

--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
   <div class="container">
     <header>
       <nav>
-        <a href="#">Introduction</a>
-        <a href="#">Skills</a>
-        <a href="#">Work History</a>
-        <a href="#">Contact Me</a>
+        <a href="#intro">Introduction</a>
+        <a href="#skills">Skills</a>
+        <a href="#work-history">Work History</a>
+        <a href="#contact">Contact Me</a>
       </nav>
     </header>
-    <section class="top">
+    <section class="top" id="intro">
       <div class="wrapper">
        <div class="img-div">
           <img class="image" src="img/20180612_115513.jpg"alt="Picture of Me">
@@ -43,24 +43,37 @@
 
     <hr>
 
-    <section class="middle">
-      <div class="content skills">
+    <section class="middle" >
+      <div class="content skills" id="skills">
         <h3>Skills</h3>
         <ul>
-          <li><a href="#">proficient with basic html</a></li>
-          <li><a href="#">proficient with basic css</a></li>
+          <li><a href="#">Semantic HTML</a></li>
+          <li><a href="#">Responsive CSS</a></li>
+          <li><a href="#">CSS Preprocessors</a></li>
+          <li><a href="#">Making Pizza</a></li>
+          <li><a href="#">Elementary Javascript</a></li>
         </ul>
       </div>
 
       <div class="vl"></div>
 
-      <div class="content work-history">
+      <div class="content work-history" id="work-history">
         <h3>Work History</h3>
         <table>
           <tr>
             <th>Yrs</th>
             <th>Company</th>
             <th>Job Title</th>
+          </tr>
+          <tr>
+            <td><1</td>
+            <td>Lambda Student</td>
+            <td>UI Developer</td>
+          </tr>
+          <tr>
+            <td><1</td>
+            <td>Lambda Student</td>
+            <td>CSS Developer</td>
           </tr>
           <tr>
             <td>1</td>
@@ -70,7 +83,7 @@
         </table>
       </div>
     </section>
-    <section class="bottom">
+    <section class="bottom" id="contact">
       <h3>Contact Me</h3>
       <ul>
         <li><span>Phone:</span> 559-359-0618</li>
